# Estudos_analista

./: README.md
Power_BI/: cap03_exercicio.pbix  cap03_livro.pbix  minha_versão_cap02.pbix
Power_BI/Projeto_cotacao_moedas/: cotacao_moedas.pbix
Python/Curso_intensivo/cap10/: aprendendo_python.py  convidado.py  enquete_programacao.py  enquete_programacao.txt  guest.txt  guest_book.txt  learning_python.txt  lista_convidados.py  programming.txt  write_message.py
Python/calculadora/: pyproject.toml
Python/calculadora/calculadora/: calculadora.py
