[tool.poetry]
name = "calculadora"
version = "0.1.0"
description = ""
authors = ["Deyved Antonio <deyved.antonio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
kivy = "^2.1.0"
kivymd = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
